[package]
name = "oxideav-vp9"
version = "0.0.3"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-vp9"
authors = ["Mark Karpeles"]
description = "Pure-Rust VP9 video header parser + decoder scaffold for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-vp9"
keywords = ["multimedia", "video", "vp9", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"
[dev-dependencies]
oxideav-mp4 = "0.0"
