[package]
name = "oxideav-vp9"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-vp9"
authors = ["Mark Karpeles"]
description = "Pure-Rust VP9 video header parser + decoder scaffold for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-vp9"
keywords = ["multimedia", "video", "vp9", "codec", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::video"]

[dependencies]
oxideav-core = "0.1"
oxideav-codec = "0.1"

# No dev-dependencies on other oxideav crates: previously we pulled in
# oxideav-mp4 for one codec-id lookup but that crate's published 0.0.3
# has a transitive API mismatch with the current oxideav-container. The
# single use-site inlined the lookup instead.
